# GNNProject

./: .gitattributes  .gitignore  Makefile  README.md  environment.yml  pyproject.toml  pytest.ini  requirements.txt
configs/data/: esol.yaml  qm9_small.yaml
configs/eval/: scaffold.yaml
configs/grids/: esol_grid.yaml  esol_small_grid.yaml
configs/model/: gin.yaml  mpnn.yaml
configs/train/: base.yaml  deep.yaml  regularized.yaml
data/processed/: data_v3.pt
outputs/baselines/: ESOL_ridge_scaffold_seed0_20251023-235231.csv  ESOL_ridge_scaffold_seed0_20251023-235231_preds.csv
outputs/descriptors/: ESOL_N1128_D1241_20251023-233305.npz  ESOL_N1128_D1241_20251023-235546.npz.json  QM9_N15000_D187_20251023-233423.npz  QM9_N15000_D187_20251023-233423.npz.json
report/: GNNFinalPresentationGroup12Colon.pptx
report/tables/: substructure_mask_ESOL_gin.csv  substructure_mask_gin_esol.csv  summary.csv
runs/esol_gin/: best.ckpt  metrics.csv  summary.json
runs/esol_gin_scaffold_seed0_20251027-005758/: best.ckpt  metrics.csv  summary.json
scripts/: make_figures.sh  run_phase6_experiments.sh
src/: __init__.py
src/analysis/: aggregate_csv.py  plots.py  tsne_embeddings.py
src/baselines/: descriptors.py  random_forest.py  ridge.py
src/cli/: baseline.py  evaluate.py  (+2 more)
tests/: test_ckpt_determinism_ema.py  test_cli_baseline.py  test_cli_evaluate.py  test_loop_standardize_and_cosine.py  test_model_calibration_hooks.py  test_models_forward.py  test_models_mpnn.py  test_qm9_epochs_improve.py  test_qm9_mpnn_smoke.py  test_smoke.py  test_splits.py  test_sweep_smoke.py
(+313 files in other folders)
