[project]
name = "mol-gnn"
version = "0.1.0"
requires-python = ">=3.10"
description = "Molecular property prediction with GIN/MPNN on ESOL and a small QM9 subset."
authors = [{ name = "Angel Colon" }]
license = { text = "MIT" }
dependencies = [
  "torch>=2.2",
  "torch-geometric>=2.5",
  "scikit-learn>=1.4",
  "pandas>=2.2",
  "matplotlib>=3.8",
  "hydra-core>=1.3",
  "omegaconf>=2.3",
  "tensorboard>=2.16",
  "rdkit-pypi",
]

[tool.pytest.ini_options]
addopts = "-q"
pythonpath = ["src"]
